flask-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: api
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: flaskapi
  type: LoadBalancer
