postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
   - name: postgres-node-port
     port: 5432
     protocol: TCP
  selector:
    app: postgres
